--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <META character="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Uke 2.29</title>
+  <title>Uke 2.30</title>
+  <!-- Startup configuration -->
+  <link rel="manifest" href="manifest.json">
+  <!-- Fallback application metadata for legacy browsers -->
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon-iphone-60x60.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-ipad-76x76.png">
