--- a/app/chords/chordView.html
+++ b/app/chords/chordView.html
@@ -8,7 +8,8 @@
 					</li>
 				</ul>
 			</td>
-			<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1">
+			<td class="col-sm-1 col-md-1 col-lg-1"></td>
+			<td class="col-xs-11 col-sm-8 col-md-8 col-lg-8">
 				<div>
 					<img ng-if="!vm.onFlatSharp"
 						 ng-src="{{vm.currentChord.imageUrl}}"
@@ -22,17 +23,19 @@
 				</div>
 
 				<div class = "row" id="sharpFlatNav">
-					<span class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+					<span class="col-xs-6 col-sm-8 col-md-8 col-lg-8">
 						<a ng-class="vm.flat" ng-click="flat('f')" > b </a> 
 					</span>
-					<span class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+					<span class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
 						<a ng-class="vm.sharp" ng-click="sharp('s')" > # </a> 
 					</span>
 				</div> 
 			</td>
+			<td class="col-sm-3 col-md-3 col-lg-1"></td>
 		</table>
 	</div>
 	<div class = "row" id="chordNav">
+		<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 		<div class = "col-xs-1">
 		<a ng-class="active('A')" ng-click="goToChords('A', vm.currentChord.chordName)">A</a> </div>
 		<div class = "col-xs-1">
@@ -47,5 +50,6 @@
 		<a ng-class="active('F')" ng-click="goToChords('F', vm.currentChord.chordName)" >F</a> </div>
 		<div class = "col-xs-1">
 		<a ng-class="active('G')" ng-click="goToChords('G', vm.currentChord.chordName)" >G</a> </div>
+		<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 	</div>
 </div>
