--- a/app/improv/improv1View.html
+++ b/app/improv/improv1View.html
@@ -38,8 +38,9 @@
 							 <a ng-class="active('m5')" ng-click="selectStyle('m5', vm.currentPatterns.chordGroup)">mP 5</a>
 						</li>
 					</ul>
-			</td>				
-			<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1">
+			</td>
+			<td class="col-sm-1 col-md-1 col-lg-1"></td>				
+			<td class="col-xs-11 col-sm-8 col-md-8 col-lg-8">
 				<div>
 					<img ng-src="{{vm.currentPatterns.imageUrl1}}"
 						 title="{{vm.currentPatterns.patternName}}">
@@ -49,14 +50,17 @@
 					<div><span>{{vm.currentPatterns.patternTitle}}</span></div>
 				</div>
 			</td>
+			<td class="col-sm-3 col-md-3 col-lg-1"></td>
 		</table>
 	</div>
-		<div class="row" id="patternNav"> 
+		<div class="row" id="patternNav">
+			<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div> 
 			<div ng-repeat="chord in vm.filteredChords">
 				<div class = "col-xs-1">
 					<a ng-class="active(chord)" 
 				   		ng-click="selectChord(chord)">{{chord.chordGroup}}</a>
 		   		</div>
 			</div>
+			<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 		</div>
 </div>
