--- a/app/progressions/progView.html
+++ b/app/progressions/progView.html
@@ -36,7 +36,8 @@
 					</ul>
 
 				</td>
-				<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1">
+				<td class="col-sm-1 col-md-1 col-lg-1"></td>
+				<td class="col-xs-11 col-sm-8 col-md-8 col-lg-8">
 					<div>
 						<img ng-src="{{vm.currentChords.imageUrl1}}"
 							 title="{{vm.currentChords.image1Title}}">
@@ -52,13 +53,16 @@
 						<div><span>{{vm.currentChords.progTitle}}</span></div>
 					</div>
 				</td>
+				<td class="col-sm-3 col-md-3 col-lg-1"></td>
 			</table>
 		</div>
 		<div class="row" id="progNav"> 
+			<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 			<div ng-repeat="chord in vm.filteredChords">
 				<div class = "col-xs-1">
 				<a ng-class="active(chord)" ng-click="selectChord(chord)">{{chord.chordGroup}}</a> </div>
 			</div>
+			<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 		</div>
 	</div>
 </div>
