--- a/app/beats/beatView.html
+++ b/app/beats/beatView.html
@@ -31,7 +31,8 @@
 					</li>  
 			</td>
 			
-			<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1">
+			<td class="col-sm-1 col-md-1 col-lg-1"></td>
+			<td class="col-xs-11 col-sm-8 col-md-8 col-lg-8">
 					<div class="row" id="progTitle">
 						<div><span>Style: {{vm.currentBeat.beatStyle}}</span></div>
 						<div><span>{{vm.currentBeat.beatTitle}}</span></div>
@@ -52,13 +53,16 @@
 		 				</div>
 	 				</div>
 			</td>
+			<td class="col-sm-3 col-md-3 col-lg-1"></td>
 		</table>
 	</div>
 	<div class="row" id="progNav">
+		<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 		<div ng-repeat="beat in vm.filteredBeats">
 			<div class = "col-xs-1">
 				<a ng-class="active(beat)" ng-click="selectBeat(beat)">{{beat.beatName}}</a>
 			</div>
 		</div>
+		<div class = "col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
 	</div>
 </div>
