--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Uke 2.30</title>
   <!-- Startup configuration -->
-  <link rel="manifest" href="manifest.json">
+ <!-- <link rel="manifest" href="manifest.json"> -->
   <!-- Fallback application metadata for legacy browsers -->
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon-iphone-60x60.png">
