made a tool view

--- a/app/welcomeView.html
+++ b/app/welcomeView.html
@@ -45,7 +45,7 @@
 		<div class = "col-xs-3">
 			<div class="round-button size-4">
 				<div class="round-button-circle color-4">
-					<a ui-sref="Themes" class="round-button">
+					<a ui-sref="toolView" class="round-button">
 						<span class="glyphicon glyphicon-cog"></span>
 					</a>
 				</div>
