--- a/app/beats/beatView.html
+++ b/app/beats/beatView.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary" id="progChords">
+<div class="panel panel-primary" id="beatChords">
 	<div class="panel-body">
 		<table class="table">
 			<td class="col-xs-1">
@@ -33,7 +33,7 @@
 			
 			<td class="col-sm-1 col-md-1 col-lg-1"></td>
 			<td class="col-xs-11 col-sm-8 col-md-8 col-lg-8">
-					<div class="row" id="progTitle">
+					<div class="row" id="beatTitle">
 						<div><span>Style: {{vm.currentBeat.beatStyle}}</span></div>
 						<div><span>{{vm.currentBeat.beatTitle}}</span></div>
 					</div>
@@ -41,7 +41,7 @@
 						<img ng-src="{{vm.currentBeat.imageUrl}}"
 							 title="{{vm.currentBeat.beatName}}"> 
 					</div>
-		 			<div class="row" id="progTitle">
+		 			<div class="row" id="beatTitle">
 					 	<div audio options="options" class="ng-isolate-scope">
 					 		<div ng-click="play(1)" class="play_border" ng-show="loaded && !running">
 					 			<div class="play_button"></div>
@@ -56,7 +56,7 @@
 			<td class="col-sm-3 col-md-3 col-lg-1"></td>
 		</table>
 	</div>
-	<div class="row" id="progNav">
+	<div class="row" id="beatNav">
 		<div class = "col-xs-2 col-sm-3 col-md-3 col-lg-2"></div>
 		<div ng-repeat="beat in vm.filteredBeats">
 			<div class = "col-xs-1">
