--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <!--Mess with style -->
-  <link ng-href="{{favoriteCookie}}" rel="stylesheet">
+  <link ng-href="{{favoriteTheme}}" rel="stylesheet">
 
   <!-- Libraries Scripts -->
   <script src="js/jquery.js"></script>
@@ -72,10 +72,13 @@
   <script src="app/tips/tipListCtrl.js"></script>
 
   <!-- Theme Controllers-->
-  <script src="app/themes/themeListCtrl.js"></script>
+  <script src="common/services/themeListCtrl.js"></script>
 
   <!-- Beat Controllers-->
   <script src="app/beats/beatViewCtrl.js"></script>
+
+  <!-- tool Controllers-->
+  <script src="app/tools/toolViewCtrl.js"></script>
 
 <!--
   $('.navbar-collapse a').click(function(){
@@ -89,7 +92,8 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container">
 			<a class="navbar-brand"
-				ui-sref="home">Uke </a>
+				ui-sref="home"
+        ng-style="{{favoriteColor}}">Uke</a>
 			<div class="navbar-header">
 				<button type="button"
 						class="navbar-toggle"
@@ -106,8 +110,8 @@
 					<li><a ui-sref="chordView">Chords</a></li>
           <li><a ui-sref="progView">Progressions</a></li>
           <li><a ui-sref="improv1View">Improv</a></li>
-          <li><a ui-sref="beatView">Beats</a></li> 
-           <li><a ui-sref="tipsView">Tips</a></li>
+          <li><a ui-sref="toolView">Tools</a></li> 
+          <li><a ui-sref="tipsView">Tips</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Themes <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
